<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ro.pub.cs.systems.pdsd.practicaltest01var05.PracticalTest01Var05MainActivity" >


        
        
        
        
     
     <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/glcontainer"
        android:layout_centerHorizontal="true"
        android:columnCount="4"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:rowCount="3" >

        <Button
            android:id="@+id/north"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="2"
            android:layout_row="0" 
            android:text="@string/north_press" />
          

        <Button
            android:id="@+id/west"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="1" 
            android:text="@string/west_press" />
       
        <Button
            android:id="@+id/south"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="2"
            android:layout_row="2" 
            android:text="@string/south_press" />

        <Button
            android:id="@+id/east"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="3"
            android:layout_row="1"
            android:text="@string/east_press" />
    </GridLayout>
     
     
     <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:id="@+id/llcontainer"
        android:layout_below="@id/glcontainer"
        android:layout_centerHorizontal="true"
        android:gravity="bottom">
        <Button
            android:id="@+id/navigate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/navigate" />
    </LinearLayout>
    
    <EditText
        android:id="@+id/edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/llcontainer"
        android:layout_centerHorizontal="true"
        android:enabled="false"
        android:gravity="center" />
        android:inputType="text" />
    	


</RelativeLayout>
